--- a/index.html
+++ b/index.html
@@ -1,134 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="./src/assets/scissors.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap" rel="stylesheet" />
 
-    <title>Hair Day</title>
-  </head>
-  <body>
-    <div class="container">
-      <img src="./src/assets/logo.svg" alt="Logo" class="logo" />
+  <link rel="icon" href="./src/assets/scissors.svg" />
 
+  <title>Pet Shop Schedule</title>
+</head>
+
+<body>
+  <div class="container">
+    <!-- <img src="./src/assets/logo.svg" alt="Logo" class="logo" /> -->
+    <dialog id="dialog" class="center">
       <form class="form">
         <header>
-          <h1>Agende um atendimento</h1>
+          <h1 class="modalH1">Agende um atendimento</h1>
           <p>
-            Selecione data, horário e informe o nome do cliente para criar o
-            agendamento
+            Preencha os dados do cliente para realizar o agendamento:
           </p>
         </header>
 
-        <label for="date" class="label">Data</label>
-        <div class="input">
-          <i><img src="./src/assets/calendar.svg" alt="Calendário" /></i>
-          <input type="date" id="date" name="date" required />
+        <label for="client" class="label">Nome do tutor</label>
+        <div class="input modalInput">
+          <i class="modalInputIcon"><img src="./src/assets/person.svg" alt="Pessoa"/></i>
+          <input type="text" id="client" name="client" placeholder="Nome do cliente" class="modalInput" required />
         </div>
-
-        <span class="label">Horários</span>
-        <ul id="hours" class="hours" aria-label="Horários disponíveis de manhã">
-          <!-- Exemplo: Manhã -->
-          <!-- <li data-period="morning" class="hour-period">Manhã</li>
-          <li data-period="morning" value="09:00" class="hour hour-available">
-            09:00
-          </li>
-          <li data-period="morning" value="10:00" class="hour hour-available">
-            10:00
-          </li>
-          <li data-period="morning" value="11:00" class="hour hour-unavailable">
-            11:00
-          </li>
-          <li data-period="morning" value="12:00" class="hour hour-available">
-            12:00
-          </li> -->
-          <!-- Exemplo: Tarde  -->
-          <!-- <li data-period="morning" class="hour-period">Tarde</li>
-          <li
-            data-period="afternoon"
-            value="13:00"
-            class="hour hour-unavailable"
-          >
-            13:00
-          </li>
-          <li
-            data-period="afternoon"
-            value="14:00"
-            class="hour hour-unavailable"
-          >
-            14:00
-          </li>
-          <li data-period="afternoon" value="15:00" class="hour hour-available">
-            15:00
-          </li>
-          <li
-            data-period="afternoon"
-            value="16:00"
-            class="hour hour-unavailable"
-          >
-            16:00
-          </li>
-          <li
-            data-period="afternoon"
-            value="17:00"
-            class="hour hour-unavailable"
-          >
-            17:00
-          </li>
-          <li data-period="afternoon" value="18:00" class="hour hour-available">
-            18:00
-          </li> -->
-          <!-- Exemplo: Noite -->
-          <!-- <li data-period="morning" class="hour-period">Noite</li>
-
-          <li data-period="night" value="19:00" class="hour hour-available">
-            19:00
-          </li>
-          <li data-period="night" value="20:00" class="hour hour-available">
-            20:00
-          </li>
-          <li data-period="night" value="21:00" class="hour hour-unavailable">
-            21:00
-          </li> -->
-        </ul>
 
         <label for="client" class="label">Cliente</label>
-        <div class="input">
-          <i><img src="./src/assets/person.svg" alt="Calendário" /></i>
-          <input
-            type="text"
-            id="client"
-            name="client"
-            placeholder="Nome do cliente"
-            required
-          />
+        <div class="input modalInput">
+          <i class="modalInputIcon"><img src="./src/assets/person.svg" alt="Pessoa" /></i>
+          <input type="text" id="client" name="client" placeholder="Nome do cliente" class="modalInput" required />
         </div>
-
-        <button type="submit" class="button">Agendar</button>
+        <div class="modalButtonWrapper">
+          <button type="submit" class="button close" id="closeModal">Fechar</button>
+          <button type="submit" class="button record" id="recordButton">Agendar</button>
+        </div>
       </form>
+    </dialog>
 
-      <aside class="schedule">
+    <aside class="schedule">
+      <div class="schedule-container">
         <header>
           <h1>Agendamentos</h1>
-          <p>Visualize os agendamentos de acordo com o dia selecionado</p>
+          <p>Visualize e selecione os agendamentos de acordo com o dia selecionado</p>
         </header>
+        <div class="input">
+          <i><img src="./src/assets/calendar.svg" alt="Calendário" /></i>
+          <input type="date" id="date" name="date" class="inputSchedules" required />
+        </div>
+      </div>
 
-        <section class="schedule-period">
-          <header>
-            <img src="./src/assets/morning.svg" alt="Manhã" />
-            <strong>Manhã</strong>
-            <span>09h-12h</span>
-          </header>
-          <ul id="period-morning" class="period">
-            <!-- Exemplo  
+      <section class="schedule-period">
+        <header>
+          <img src="./src/assets/morning.svg" alt="Manhã" />
+          <strong>Manhã</strong>
+          <span>09h-12h</span>
+        </header>
+        <ul id="period-morning" class="period">
+          <!-- Exemplo  
             <li>
               <strong>11:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -138,17 +73,17 @@
                 class="cancel-icon"
               />
             </li>-->
-          </ul>
-        </section>
+        </ul>
+      </section>
 
-        <section class="schedule-period">
-          <header>
-            <img src="./src/assets/afternoon.svg" alt="Tarde" />
-            <strong>Tarde</strong>
-            <span>13h-18h</span>
-          </header>
-          <ul id="period-afternoon" class="period">
-            <!-- Exemplo 
+      <section class="schedule-period">
+        <header>
+          <img src="./src/assets/afternoon.svg" alt="Tarde" />
+          <strong>Tarde</strong>
+          <span>13h-18h</span>
+        </header>
+        <ul id="period-afternoon" class="period">
+          <!-- Exemplo 
             <li>
               <strong>14:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -158,17 +93,17 @@
                 class="cancel-icon"
               />
             </li>-->
-          </ul>
-        </section>
+        </ul>
+      </section>
 
-        <section class="schedule-period">
-          <header>
-            <img src="./src/assets/night.svg" alt="noite" />
-            <strong>noite</strong>
-            <span>19h-21h</span>
-          </header>
-          <ul id="period-night" class="period">
-            <!-- Exemplo 
+      <section class="schedule-period">
+        <header>
+          <img src="./src/assets/night.svg" alt="noite" />
+          <strong>noite</strong>
+          <span>19h-21h</span>
+        </header>
+        <ul id="period-night" class="period">
+          <!-- Exemplo 
             <li>
               <strong>19:00</strong>
               <span>Rodrigo Gonçalves</span>
@@ -178,9 +113,13 @@
                 class="cancel-icon"
               />
             </li>-->
-          </ul>
-        </section>
-      </aside>
-    </div>
-  </body>
+        </ul>
+      </section>
+      <div class="buttonContainer">
+        <button type="submit" class="button" id="newScheduling">Novo agendamento</button>
+      </div>
+    </aside>
+  </div>
+</body>
+
 </html>
