nao ta funcoinando

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         <label class="label">Data</label>
                         <div class="input modalInput">
                             <i class="modalInputIcon"><img src="./src/assets/calendar.svg" class="icon"
-                                    alt="Pessoa" /></i>
-                            <input type="date" id="date" name="date" placeholder="01/01/2000" class="modalInput"
+                                    alt="Data" /></i>
+                            <input type="date" id="dateSchedule" name="date" placeholder="01/01/2000" class="modalInput"
                                 required />
                         </div>
                     </div>
@@ -97,16 +97,6 @@
                     <span>09h-12h</span>
                 </header>
                 <ul id="period-morning" class="period">
-                    <!-- Exemplo  
-            <li>
-              <strong>11:00</strong>
-              <span>Rodrigo Gonçalves</span>
-              <img
-                src="./src/assets/cancel.svg"
-                alt="Cancelar"
-                class="cancel-icon"
-              />
-            </li>-->
                 </ul>
             </section>
 
@@ -117,16 +107,14 @@
                     <span>13h-18h</span>
                 </header>
                 <ul id="period-afternoon" class="period">
-                    <!-- Exemplo 
-            <li>
-              <strong>14:00</strong>
-              <span>Rodrigo Gonçalves</span>
-              <img
-                src="./src/assets/cancel.svg"
-                alt="Cancelar"
-                class="cancel-icon"
-              />
-            </li>-->
+                    <!-- <li>
+                        <strong>11:00</strong>
+                        <span>Nome do Pet</span>
+                        <span>/</span>
+                        <span>Nome do tutor</span>
+                        <span>Descrição</span>
+                        <img src="./src/assets/cancel.svg" alt="Cancelar" class="cancel-icon" />
+                    </li> -->
                 </ul>
             </section>
 
@@ -137,16 +125,6 @@
                     <span>19h-21h</span>
                 </header>
                 <ul id="period-night" class="period">
-                    <!-- Exemplo 
-            <li>
-              <strong>19:00</strong>
-              <span>Rodrigo Gonçalves</span>
-              <img
-                src="./src/assets/cancel.svg"
-                alt="Cancelar"
-                class="cancel-icon"
-              />
-            </li>-->
                 </ul>
             </section>
             <div class="buttonContainer">
