adicionando sem aparecer f5

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="modalButtonWrapper">
-                    <button class="button close" id="closeModal">Fechar</button>
+                    <button type="button" class="button close" id="closeModal">Fechar</button>
                     <button type="submit" class="button record" id="recordButton">Agendar</button>
                 </div>
             </form>
